feat: add API to fetch all active refresh tokens for a user (#135)
