# src/main/java/com/dreamsportslabs/guardian/dao/model/UserRefreshTokenModel.java
@@ -1,0 +1,19 @@
+package com.dreamsportslabs.guardian.dao.model;
+
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
+import com.fasterxml.jackson.databind.annotation.JsonNaming;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.extern.jackson.Jacksonized;
+
+@Getter
+@Builder
+@Jacksonized
+@JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+public class UserRefreshTokenModel {
+  private String refreshToken;
+  private String deviceName;
+  private String location;
+  private String ip;
+  private String source;
+}
